--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -2,6 +2,7 @@
 
 // nav-hero-grid which holds the navbar and header area
 .nav-hero-grid {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
@@ -14,17 +15,18 @@ nav {
     grid-area: nav;
     background-color: $grass-green;
     padding: 1em;
-    width: 100%;
+    // width: 100%;
 }
 // header area
 .hero {
     grid-area: hero;
     padding: 1em;
-    width: 100%;
+    // width: 100%;
 }
 
 // activities-grid for index.html
 .activities-grid {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
@@ -36,13 +38,14 @@ nav {
 main {
     grid-area: main;
     background-color: $charcoal;
-    width: 100%;
+    // width: 100%;
     padding: 1em;
 }
 
 // activities-nested-grid for index.html
 .activities-nested-grid {
     display: grid;
+    // width: 100%;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: 
@@ -90,6 +93,7 @@ main {
 // footer grid
 .footer-grid{
     display: grid;
+    width: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 
@@ -100,7 +104,7 @@ main {
 footer {
     grid-area: footer;
     background-color: $grass-green;
-    width: 100%;
+    // width: 100%;
     padding: 1em;
 }
 
